--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Roboto:300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" media="screen" href="../public/css/main.css" />
+        <link rel="stylesheet" href="../public/css/main.css"/>
+    
         <script src="https://kit.fontawesome.com/f8b14333ef.js"></script>
     </head>
     <body>
